v1.1.0/modules/schema/pages/class/TapeShieldCableInfo.adoc
= `TapeShieldCableInfo`
:toclevels: 4


+++Tape shield cable data.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TapeShieldCableInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** xref::class/WireInfo.adoc[`WireInfo`]
**** xref::class/CableInfo.adoc[`CableInfo`]
***** *`TapeShieldCableInfo`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<tapeLap,`tapeLap`>>
//| [[slots_table.tapeLap]]<<tapeLap,`tapeLap`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Percentage of the tape shield width that overlaps in each wrap, typically 10% to 25%.+++
| _n/a_

| <<tapeThickness,`tapeThickness`>>
//| [[slots_table.tapeThickness]]<<tapeThickness,`tapeThickness`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Thickness of the tape shield, before wrapping.+++
| _n/a_

| <<constructionKind,`constructionKind`>>
//| [[slots_table.constructionKind]]<<constructionKind,`constructionKind`>>
| 0..1 +
xref::enumeration/CableConstructionKind.adoc[`CableConstructionKind`]
| +++Kind of construction of this cable.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<diameterOverCore,`diameterOverCore`>>
//| [[slots_table.diameterOverCore]]<<diameterOverCore,`diameterOverCore`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Diameter over the core, including any semi-con screen; should be the insulating layer's inside diameter.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<diameterOverInsulation,`diameterOverInsulation`>>
//| [[slots_table.diameterOverInsulation]]<<diameterOverInsulation,`diameterOverInsulation`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Diameter over the insulating layer, excluding outer screen.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<diameterOverJacket,`diameterOverJacket`>>
//| [[slots_table.diameterOverJacket]]<<diameterOverJacket,`diameterOverJacket`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Diameter over the outermost jacketing layer.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<diameterOverScreen,`diameterOverScreen`>>
//| [[slots_table.diameterOverScreen]]<<diameterOverScreen,`diameterOverScreen`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Diameter over the outer screen; should be the shield's inside diameter.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<isStrandFill,`isStrandFill`>>
//| [[slots_table.isStrandFill]]<<isStrandFill,`isStrandFill`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if wire strands are extruded in a way to fill the voids in the cable.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<nominalTemperature,`nominalTemperature`>>
//| [[slots_table.nominalTemperature]]<<nominalTemperature,`nominalTemperature`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Maximum nominal design operating temperature.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<outerJacketKind,`outerJacketKind`>>
//| [[slots_table.outerJacketKind]]<<outerJacketKind,`outerJacketKind`>>
| 0..1 +
xref::enumeration/CableOuterJacketKind.adoc[`CableOuterJacketKind`]
| +++Kind of outer jacket of this cable.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<sheathAsNeutral,`sheathAsNeutral`>>
//| [[slots_table.sheathAsNeutral]]<<sheathAsNeutral,`sheathAsNeutral`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if sheath / shield is used as a neutral (i.e., bonded).+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<shieldMaterial,`shieldMaterial`>>
//| [[slots_table.shieldMaterial]]<<shieldMaterial,`shieldMaterial`>>
| 0..1 +
xref::enumeration/CableShieldMaterialKind.adoc[`CableShieldMaterialKind`]
| +++Material of the shield.+++
| xref::class/CableInfo.adoc[`CableInfo`]

| <<ACLineSegmentPhase,`ACLineSegmentPhase`>>
//| [[slots_table.ACLineSegmentPhase]]<<ACLineSegmentPhase,`ACLineSegmentPhase`>>
| 0..* +
xref::class/ACLineSegmentPhase.adoc[`ACLineSegmentPhase`]
| +++AC line segment phase information associated with this wire information.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<WirePhaseInfo,`WirePhaseInfo`>>
//| [[slots_table.WirePhaseInfo]]<<WirePhaseInfo,`WirePhaseInfo`>>
| 0..* +
xref::class/WirePhaseInfo.adoc[`WirePhaseInfo`]
| +++Wire phase information associated with this wire information.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<coreRadius,`coreRadius`>>
//| [[slots_table.coreRadius]]<<coreRadius,`coreRadius`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++(if there is a different core material) Radius of the central core.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<coreStrandCount,`coreStrandCount`>>
//| [[slots_table.coreStrandCount]]<<coreStrandCount,`coreStrandCount`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++(if used) Number of strands in the steel core.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<gmr,`gmr`>>
//| [[slots_table.gmr]]<<gmr,`gmr`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Geometric mean radius. If we replace the conductor by a thin walled tube of radius GMR, then its reactance is identical to...+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<insulated,`insulated`>>
//| [[slots_table.insulated]]<<insulated,`insulated`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if conductor is insulated.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<insulationMaterial,`insulationMaterial`>>
//| [[slots_table.insulationMaterial]]<<insulationMaterial,`insulationMaterial`>>
| 0..1 +
xref::enumeration/WireInsulationKind.adoc[`WireInsulationKind`]
| +++(if insulated conductor) Material used for insulation.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<insulationThickness,`insulationThickness`>>
//| [[slots_table.insulationThickness]]<<insulationThickness,`insulationThickness`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++(if insulated conductor) Thickness of the insulation.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<material,`material`>>
//| [[slots_table.material]]<<material,`material`>>
| 0..1 +
xref::enumeration/WireMaterialKind.adoc[`WireMaterialKind`]
| +++Conductor material.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<rAC25,`rAC25`>>
//| [[slots_table.rAC25]]<<rAC25,`rAC25`>>
| 0..1 +
xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++AC resistance per unit length of the conductor at 25 °C.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<rAC50,`rAC50`>>
//| [[slots_table.rAC50]]<<rAC50,`rAC50`>>
| 0..1 +
xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++AC resistance per unit length of the conductor at 50 °C.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<rAC75,`rAC75`>>
//| [[slots_table.rAC75]]<<rAC75,`rAC75`>>
| 0..1 +
xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++AC resistance per unit length of the conductor at 75 °C.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<rDC20,`rDC20`>>
//| [[slots_table.rDC20]]<<rDC20,`rDC20`>>
| 0..1 +
xref::class/ResistancePerLength.adoc[`ResistancePerLength`]
| +++DC resistance per unit length of the conductor at 20 °C.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<radius,`radius`>>
//| [[slots_table.radius]]<<radius,`radius`>>
| 0..1 +
xref::class/Length.adoc[`Length`]
| +++Outside radius of the wire.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<ratedCurrent,`ratedCurrent`>>
//| [[slots_table.ratedCurrent]]<<ratedCurrent,`ratedCurrent`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Current carrying capacity of the wire under stated thermal conditions.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<sizeDescription,`sizeDescription`>>
//| [[slots_table.sizeDescription]]<<sizeDescription,`sizeDescription`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Describes the wire gauge or cross section (e.g., 4/0, #2, 336.5).+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<strandCount,`strandCount`>>
//| [[slots_table.strandCount]]<<strandCount,`strandCount`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number of strands in the conductor.+++
| xref::class/WireInfo.adoc[`WireInfo`]

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<CatalogAssetType,`CatalogAssetType`>>
//| [[slots_table.CatalogAssetType]]<<CatalogAssetType,`CatalogAssetType`>>
| 0..1 +
xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<PowerSystemResources,`PowerSystemResources`>>
//| [[slots_table.PowerSystemResources]]<<PowerSystemResources,`PowerSystemResources`>>
| 0..* +
xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<ProductAssetModel,`ProductAssetModel`>>
//| [[slots_table.ProductAssetModel]]<<ProductAssetModel,`ProductAssetModel`>>
| 0..1 +
xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ACLineSegmentPhase]
=== `ACLineSegmentPhase`
+++AC line segment phase information associated with this wire information.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.ACLineSegmentPhase`
| Cardinality
| 0..*
| Type
| xref::class/ACLineSegmentPhase.adoc[`ACLineSegmentPhase`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.ACLineSegmentPhase,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.CatalogAssetType,&#10548;>>
--
////


//[discrete]
[#constructionKind]
=== `constructionKind`
+++Kind of construction of this cable.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.constructionKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CableConstructionKind.adoc[`CableConstructionKind`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.constructionKind,&#10548;>>
--
////


//[discrete]
[#coreRadius]
=== `coreRadius`
+++(if there is a different core material) Radius of the central core.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.coreRadius`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.coreRadius,&#10548;>>
--
////


//[discrete]
[#coreStrandCount]
=== `coreStrandCount`
+++(if used) Number of strands in the steel core.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.coreStrandCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.coreStrandCount,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#diameterOverCore]
=== `diameterOverCore`
+++Diameter over the core, including any semi-con screen; should be the insulating layer's inside diameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverCore`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.diameterOverCore,&#10548;>>
--
////


//[discrete]
[#diameterOverInsulation]
=== `diameterOverInsulation`
+++Diameter over the insulating layer, excluding outer screen.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverInsulation`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.diameterOverInsulation,&#10548;>>
--
////


//[discrete]
[#diameterOverJacket]
=== `diameterOverJacket`
+++Diameter over the outermost jacketing layer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverJacket`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.diameterOverJacket,&#10548;>>
--
////


//[discrete]
[#diameterOverScreen]
=== `diameterOverScreen`
+++Diameter over the outer screen; should be the shield's inside diameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.diameterOverScreen`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.diameterOverScreen,&#10548;>>
--
////


//[discrete]
[#gmr]
=== `gmr`
+++Geometric mean radius. If we replace the conductor by a thin walled tube of radius GMR, then its reactance is identical to the reactance of the actual conductor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.gmr`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.gmr,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#insulated]
=== `insulated`
+++True if conductor is insulated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.insulated`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.insulated,&#10548;>>
--
////


//[discrete]
[#insulationMaterial]
=== `insulationMaterial`
+++(if insulated conductor) Material used for insulation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.insulationMaterial`
| Cardinality
| 0..1
| Type
| xref::enumeration/WireInsulationKind.adoc[`WireInsulationKind`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.insulationMaterial,&#10548;>>
--
////


//[discrete]
[#insulationThickness]
=== `insulationThickness`
+++(if insulated conductor) Thickness of the insulation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.insulationThickness`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.insulationThickness,&#10548;>>
--
////


//[discrete]
[#isStrandFill]
=== `isStrandFill`
+++True if wire strands are extruded in a way to fill the voids in the cable.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.isStrandFill`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.isStrandFill,&#10548;>>
--
////


//[discrete]
[#material]
=== `material`
+++Conductor material.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.material`
| Cardinality
| 0..1
| Type
| xref::enumeration/WireMaterialKind.adoc[`WireMaterialKind`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.material,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#nominalTemperature]
=== `nominalTemperature`
+++Maximum nominal design operating temperature.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.nominalTemperature`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.nominalTemperature,&#10548;>>
--
////


//[discrete]
[#outerJacketKind]
=== `outerJacketKind`
+++Kind of outer jacket of this cable.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.outerJacketKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/CableOuterJacketKind.adoc[`CableOuterJacketKind`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.outerJacketKind,&#10548;>>
--
////


//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemResources,&#10548;>>
--
////


//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.ProductAssetModel,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rAC25]
=== `rAC25`
+++AC resistance per unit length of the conductor at 25 °C.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rAC25`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.rAC25,&#10548;>>
--
////


//[discrete]
[#rAC50]
=== `rAC50`
+++AC resistance per unit length of the conductor at 50 °C.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rAC50`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.rAC50,&#10548;>>
--
////


//[discrete]
[#rAC75]
=== `rAC75`
+++AC resistance per unit length of the conductor at 75 °C.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rAC75`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.rAC75,&#10548;>>
--
////


//[discrete]
[#radius]
=== `radius`
+++Outside radius of the wire.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.radius`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.radius,&#10548;>>
--
////


//[discrete]
[#ratedCurrent]
=== `ratedCurrent`
+++Current carrying capacity of the wire under stated thermal conditions.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.ratedCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.ratedCurrent,&#10548;>>
--
////


//[discrete]
[#rDC20]
=== `rDC20`
+++DC resistance per unit length of the conductor at 20 °C.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.rDC20`
| Cardinality
| 0..1
| Type
| xref::class/ResistancePerLength.adoc[`ResistancePerLength`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.rDC20,&#10548;>>
--
////


//[discrete]
[#sheathAsNeutral]
=== `sheathAsNeutral`
+++True if sheath / shield is used as a neutral (i.e., bonded).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.sheathAsNeutral`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.sheathAsNeutral,&#10548;>>
--
////


//[discrete]
[#shieldMaterial]
=== `shieldMaterial`
+++Material of the shield.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CableInfo.shieldMaterial`
| Cardinality
| 0..1
| Type
| xref::enumeration/CableShieldMaterialKind.adoc[`CableShieldMaterialKind`]

| Inherited from
| xref::class/CableInfo.adoc[`CableInfo`]


|===

////
[.text-left]
--
<<slots_table.shieldMaterial,&#10548;>>
--
////


//[discrete]
[#sizeDescription]
=== `sizeDescription`
+++Describes the wire gauge or cross section (e.g., 4/0, #2, 336.5).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.sizeDescription`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.sizeDescription,&#10548;>>
--
////


//[discrete]
[#strandCount]
=== `strandCount`
+++Number of strands in the conductor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.strandCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.strandCount,&#10548;>>
--
////


//[discrete]
[#tapeLap]
=== `tapeLap`
+++Percentage of the tape shield width that overlaps in each wrap, typically 10% to 25%.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapeShieldCableInfo.tapeLap`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]


|===

////
[.text-left]
--
<<slots_table.tapeLap,&#10548;>>
--
////


//[discrete]
[#tapeThickness]
=== `tapeThickness`
+++Thickness of the tape shield, before wrapping.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TapeShieldCableInfo.tapeThickness`
| Cardinality
| 0..1
| Type
| xref::class/Length.adoc[`Length`]


|===

////
[.text-left]
--
<<slots_table.tapeThickness,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#WirePhaseInfo]
=== `WirePhaseInfo`
+++Wire phase information associated with this wire information.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WireInfo.WirePhaseInfo`
| Cardinality
| 0..*
| Type
| xref::class/WirePhaseInfo.adoc[`WirePhaseInfo`]

| Inherited from
| xref::class/WireInfo.adoc[`WireInfo`]


|===

////
[.text-left]
--
<<slots_table.WirePhaseInfo,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
